test/error/sem/whileConditionless.tig
let
    
in
	while () do (
		let
			var zelda:= 1337
		in
		
		end
	)
end
